docs(meeting-minutes): reformat

--- a/meeting-minutes/2022-09-11.md
+++ b/meeting-minutes/2022-09-11.md
@@ -34,7 +34,7 @@
 | GoPass         | • GoPass secrets can't be stored in subdirs of a repositories <br>• Potentially contact 1Password for free/discount on password management? <br>• Potentially KeyPass? (winston has had troubles with it before, overwriting, pushing before you pull etc) <br><br> **Staff Hot Takes** <br>• winston: using gopass, or using some open source alternative where we try to get an open source sponsorship (BitWarden) <br>• Loco: VaultWarden, compatible with Bitwarden but the trouble is that we need to host it ourselves (increased costs), Loco is offering to host it on his own server for a while                                                                                                                                                                                                                                                                                                                           |
 | Merchandise    | **Product Availability:** <br> Fourthwall is the best quality wise (compared to RedBubble, Printify, spr.ing) <br> **spr.ing:** stickers, mugs <br> **Fourthwall:** stickers, mugs, pins <br><br> **Products That We Want To Sell:** <br> stickers, mugs, t-shirts, hats, desk mats, laptop sleeve, (maybe) hoodie <br> **Designs:** <br> Logo print, (maybe) catwalk, (maybe) some variation of our tagline <br><br> **Where Does The "Profit" Go?** <br>• Money gets put back into OC for future ADVENTURES like _GMK keycaps_, operational costs, potentially fly pocco81 out to fourthwall (VERY SERIOUS) <br>• Potentially give OC donors a discount from the store? (thumbs up from all the staff team) <br><br> **Staff Hot Takes** <br>• winston prefers a storefront that we don't have to interact with AT ALL. Staff consensus agrees that we don't want to manage anything (Fourthwall is looking to be the winner here) |
 | Website        | **Things To Add:** <br>• Filtering by Operating System (Assume that every port is available for every OS, go through each repo and add "linux", and "macos" if it's not available on windows. <br>• If software runs on WSL, staff team have agreed to just tag it as Linux. <br><br> **What pages do we want for the website?** <br>• Home <br>• Community (core, staff, contributors, media + donations) <br>• Palette (colours, style guide, philosophy) <br>• Ports (filtering by operating system, by stars, by recently updated, by most tagged in github topics) <br><br> **What is our MVP?** <br>• Add Community Section <br>• Improved searching for ports <br>• Updated Logo <br>• Redesigned NavBar <br>• Include Android negative integers in palette                                                                                                                                                                   |
-| HacktoberFest  | Look at the branding guidelines? <br>• Look through our repos and try to tidy up and create good first issues.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
+| HacktoberFest  | • Look at the branding guidelines? <br>• Look through our repos and try to tidy up and create good first issues.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
 | Social Media   | INSANE HYPE, SUSTAINED SLOW GROWTH IS POG, WELL DONE EVERYONE WOOOO                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
 | Future Roadmap | **What Would We Like To Achieve Before 2023?** <br>• Website done <br>• Convert all ports to v2 <br>• (pre-req: merch monies) Get GMK connections <br>• 1k followers on Twitter <br>• 10k Stars on GitHub <br>• Automate more stuff on GitHub <br>• Distribute packages using an official account (releases@catppuccin.com) instead relying on the author <br>• SECRET SANTA EVENT (digital only :D)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
 
