--- a/meeting-minutes/2022-09-11.md
+++ b/meeting-minutes/2022-09-11.md
@@ -9,10 +9,14 @@
 
 ## Attendees
 
-- Hammy
-- Loco
-- Spooky
-- winston
+<table>
+<tr>
+    <td align="center"><a href="https://winston.sh/"><img src="https://avatars.githubusercontent.com/u/79978224?v=4?s=100" width="100px;" alt=""/><br /><sub><b>winston</b></sub></a><br /></td>
+    <td align="center"><a href="https://github.com/andreasgrafen"><img src="https://avatars.githubusercontent.com/u/35840154?v=4" width="100px;" alt=""/><br /><sub><b>Loco</b></sub></a><br /></td>
+    <td align="center"><a href="https://goudham.me"><img src="https://avatars.githubusercontent.com/u/58985301?v=4" width="100px;" alt=""/><br /><sub><b>Hamothy</b></sub></a><br /></td>
+    <td align="center"><a href="https://github.com/ghostx31"><img src="https://avatars.githubusercontent.com/u/68803793?v=4" width="100px;" alt=""/><br /><sub><b>Spooky</b></sub></a><br /></td>
+</tr>
+</table>
 
 ## Agenda Items
 
