--- a/meeting-minutes/2022-11-05.md
+++ b/meeting-minutes/2022-11-05.md
@@ -14,7 +14,9 @@
     <td align="center"><a href="https://winston.sh/"><img src="https://avatars.githubusercontent.com/u/79978224?v=4?s=100" width="100px;" alt=""/><br /><sub><b>winston</b></sub></a><br /></td>
     <td align="center"><a href="https://github.com/andreasgrafen"><img src="https://avatars.githubusercontent.com/u/35840154?v=4" width="100px;" alt=""/><br /><sub><b>Loco</b></sub></a><br /></td>
     <td align="center"><a href="https://github.com/sgoudham"><img src="https://avatars.githubusercontent.com/u/58985301?v=4" width="100px;" alt=""/><br /><sub><b>Hamothy</b></sub></a><br /></td>
+    <td align="center"><a href="https://github.com/DakshG07"><img src="https://avatars.githubusercontent.com/u/48651837?v=4?s=100" width="100px;" alt=""/><br /><sub><b>Dukk</b></sub></a><br /></td>
     <td align="center"><a href="https://github.com/ghostx31"><img src="https://avatars.githubusercontent.com/u/68803793?v=4" width="100px;" alt=""/><br /><sub><b>Spooky</b></sub></a><br /></td>
+    <td align="center"><a href="https://github.com/taka0o"><img src="https://avatars.githubusercontent.com/u/1811016?v=4" width="100px;" alt=""/><br /><sub><b>taka0</b></sub></a><br /></td>
     <td align="center"><a href="https://github.com/isabelincorp"><img src="https://avatars.githubusercontent.com/u/114378481?v=4" width="100px;" alt=""/><br /><sub><b>Isabel</b></sub></a><br /></td>
 </tr>
 </table>
