feat(meeting): last minute agenda

--- a/meeting-minutes/2022-11-05.md
+++ b/meeting-minutes/2022-11-05.md
@@ -35,6 +35,7 @@ Put any thoughts about the outstanding actions here
 |--------------------------------------|-----------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | WELL DONE EVERYONE                   | Hamothy   | • You guys are awesome                                                                                                                                                      |
 | The 'Licensing Issue'                | winston   | • Some of our repos aren't always MIT licensed, how do we wanna deal with this? <br>• Relevant context: [KDE Comment](https://github.com/catppuccin/catppuccin/issues/1719) |
+| The 'Ownership Issue'                | lemon     | • Some of our ports credit a single person as the author, some multiple, and some the org. As briefly mentioned before; I think that should be unified. We might need to make a plan on this. |
 | On-boarding / Port Transfer Workflow | winston   | • The current process is slightly undefined now, a GitHub bot would be great. <br> However, the question is what should the bot do?                                         |
 | Christmas Stuffs :D                  | Isabel    | • We should do lots of things for Christmas! <br>• Wallpapers? Cursors? Icons/Banners? Renamed Roles?                                                                       |
 | Merch (Again!)                       | Hamothy   | • So we got rejected from Fourthwall (sadge) <br>• How do we want to proceed? Sticker Mule?                                                                                 |
