docs: meeting summary

--- a/meeting-minutes/2022-11-05.md
+++ b/meeting-minutes/2022-11-05.md
@@ -5,7 +5,7 @@
 **Meeting Date/Time:** 05/11/2022, 17:00 UTC  
 **Meeting Purpose:** Staff Meeting Two - Electric Boogaloo  
 **Meeting Location:** Discord Voice Channel (#staff-vc)  
-**Note Taker:** Hamothy  
+**Note Taker:** Hamothy & lemon  
 
 ## Attendees
 
@@ -21,13 +21,19 @@
 </tr>
 </table>
 
+&nbsp;
+
+> **Note**<br>
+> My last words: »Holy Fuck!«<br>
+> — Hammy, 2022
+
+&nbsp;
+
 ## Outstanding Actions
 
-- [ ] Actions From Last Time Reviewed
+- [ ] GitHub OS Topics
 
-### Thoughts?
-
-Put any thoughts about the outstanding actions here
+&nbsp;
 
 ## Agenda Items
 
@@ -35,30 +41,160 @@ Put any thoughts about the outstanding actions here
 |--------------------------------------|-----------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
 | WELL DONE EVERYONE                   | Hamothy   | • You guys are awesome                                                                                                                                                      |
 | The 'Licensing Issue'                | winston   | • Some of our repos aren't always MIT licensed, how do we wanna deal with this? <br>• Relevant context: [KDE Comment](https://github.com/catppuccin/catppuccin/issues/1719) |
-| The 'Ownership Issue'                | lemon     | • Some of our ports credit a single person as the author, some multiple, and some the org. As briefly mentioned before; I think that should be unified. We might need to make a plan on this. |
+| The 'Ownership Issue'                | lemon     | • Some of our ports credit a single person as the author, some multiple, and some the org. As briefly mentioned before; I think that should be unified.                     |
 | On-boarding / Port Transfer Workflow | winston   | • The current process is slightly undefined now, a GitHub bot would be great. <br> However, the question is what should the bot do?                                         |
 | Christmas Stuffs :D                  | Isabel    | • We should do lots of things for Christmas! <br>• Wallpapers? Cursors? Icons/Banners? Renamed Roles?                                                                       |
 | Merch (Again!)                       | Hamothy   | • So we got rejected from Fourthwall (sadge) <br>• How do we want to proceed? Sticker Mule?                                                                                 |
 | Open Collective Monies               | Hamothy   | • Linked to the previous item above ^ We should really make plans / budget with the support that we're getting!                                                             |
 | Future Roadmap                       | Hamothy   | • What do we want to get accomplished by the end of the year 2022? (no solid deadlines or timelines but a general sense of direction :D)                                    |
 
+&nbsp;
+
 ## Discussion Items
 
-| Item                                 | Raised By | Notes |
-|--------------------------------------|-----------|-------|
-| WELL DONE EVERYONE                   | Hamothy   | <br>• |
-| The 'Licensing Issue'                | winston   | <br>• |
-| On-boarding / Port Transfer Workflow | winston   | <br>• |
-| Christmas Stuffs :D                  | Isabel    | <br>• |
-| Merch (Again!)                       | Hamothy   | <br>• |
-| Open Collective Monies               | Hamothy   | <br>• |
-| Future Roadmap                       | Hamothy   | <br>• |
+| Item                                 | Raised By | Notes                                                                                                     |
+|--------------------------------------|-----------|-----------------------------------------------------------------------------------------------------------|
+| WELL DONE EVERYONE                   | Hamothy   | Hammy giving everyone a nice token of appreciation. uwu                                                   |
+| The 'Licensing Issue'                | winston   | [Notes on Licensing](#licensing)                                                                          |
+| The 'Ownership Issue'                | lemon     | [Notes on Port Ownership](#authorship)                                                                    |
+| On-boarding / Port Transfer Workflow | winston   | [Notes on On-boarding](#on-boarding)                                                                      |
+| Christmas Stuffs :D                  | Isabel    | [Notes on Christmas Stuff](#christmas)                                                                    |
+| Merch (Again!)                       | Hamothy   | [Notes on Merch](#merch)                                                                                  |
+| Open Collective Monies               | Hamothy   | [Notes on Donations](#donations)                                                                          |
+| Future Roadmap                       | Hamothy   | • release anniversary! (2022-12-05)<br>• 1k discord members<br>• 1k twitter followers |
+
+**Celebration Time**
+- We have successfully converted all ports to version 2 of Catppuccin. 🎉
+- Also 10k Stars on Github! 🦀
+
+&nbsp;
 
 ## Action Items
 
-| Done? | Item | Responsible |
-|-------|------|-------------|
-|       |      |             |
+| Done? | Item                       | Responsible |
+|-------|----------------------------|-------------|
+|       | Licensing Checks           | —           |
+|       | Authorship Checks          | —           |
+|       | Website                    | winston     |
+|       | v2 Conversion Announcement | winston     |
+|       | Secret Santa               | lemon       |
+|       | Merch Dicussion            | lemon       |
+
+&nbsp;
 
 ## Other Notes & Information
+
+~~steal more stuff from other themes~~
+Look for potential ports other colourschemes have that could benefit the Catppuccin community
+
+
+&nbsp;
+
+## Detailed Notes
+### Licensing
+
+Catppuccin's main license is MIT. We encourage all Port Authors to public their ports under MIT as well. In cases where this doesn't work – for example due to dependencies – it has to be ensures that assets under the MIT license can be used.
+
+> **TODO** Ask Maintainers of GPL (e.g. youtube) ports to change the license (if possible)
+
+> **TODO** Ensure proper licensing for ports (e.g. startpage referencing something without a license at all?)
+
+---
+
+### Authorship
+
+Ports that have Metadata attached _should_ set the Author as Catppuccin in order to unify efforts. It's highly encouraged to mention Meintainers on the readme and in the description of a theme as we don't want to hide the people behind the work. Credit it important. 💜
+
+> **TODO** Check for Repos where this is applicable and reach out to the Author/Maintainer
+
+related: [Attribution](#attribution)
+
+---
+
+### Attribution
+
+Potentially have a »Maintainer« repo similar to this one (staff) for organisation purposes
+
+For attribution and credit we want to specifically highlight currently active maintainers. The idea is to split the »Thanks to«-section to highlight this. The section could have two different list where the first one specifically highlights people that are currently working on the port — as this makes it easier for users to find someone to reach out to.
+Previous maintainers as well as inspirations are ofc not to omit. Please do list them too.
+
+For Example:
+```markdown
+## 💝 Thanks to
+
+**Current Maintainer(s)**
+- [Human](https://github.com/catppuccin)
+
+**Inspiration and Contribution**
+- [Human](https://github.com/catppuccin)
+- [Human](https://github.com/catppuccin)
+```
+
+related: [Port Authorship](#authorship)
+
+---
+
+### On-Boarding
+
+In Order to make it easier to get new ports approved as well as making the »From the Request to finished Port«-process easier we want to do the following:
+- create a GitHub-Bot that allows members of the staff and core groups to send out invites to non-org-members in order to get repositories moved as well as automatically set maintainer access for the port author as well as the staff team
+- move port requests from being issue-based to being discussion-based as this allows for upvoting and better separation of concerns
+	- once a port is ready for review an issue can be derived from the discussion — issues are to be closed via a final PR to list the port
+
+> **TODO** convert existing port requests (where no draft is available) to discussions
+
+related: [Donations](#donations)
+
+---
+
+### Christmas
+
+The big one: Secret Santa!
+Is that an idea that can be realised within the Catppuccin community and do we – the community – want that? If yes, what are the limitations we want to set?
+
+> **TODO** create a community discussion
+
+**more ideas to be discussed at a later point**
+(e.g. role-names)
+
+---
+
+### Merch
+
+With fourthwall not being an option as of right now we decided to go with »[Spring](https://www.spri.ng/)« (https://www.spri.ng/creator-resources/product-costing)
+
+> **TODO** create an account
+
+> **TODO** create a community post to collect ideas and wishes
+> Ideas: Stickers, Shirts, Hoodies, Mugs
+
+Regarding Keycaps as a long-term project: We eventually want to hire a professional designer to make the work on that. This ties into the [Open Collective](#donations) section
+keycaps – hire a designer to make the keycaps
+
+related: [Donations](#donations)
+
+---
+
+### Donations
+aka »Open Collective Monies« — who is Moni, and why do we have more than one?
+
+**VPS / dedicated Server**
+A server purely for Catppuccin Stuff. This ties into the before mentioned Github Bot, it also allows us to properly host (a) Discord Bot(s) (e.g. #vibes-Radio) and potential automation of (curated) announcement crossposting to social media.
+
+> **TODO** apply for an OC credit card
+
+> **TODO** find a suitable server hoster
+
+related: [Merch](#merch)
+
+---
+
+### Website
+
+Get the MVP shipable!
+- review and merge taka's open PR against the website
+- include images to be rendered from markdown
+- data inclusion from a json file
+
+Do we want Analytics, and if we do – which solution to we go for? Very preferably **not Google**!
 
